# HP-SpMM-SDDMM

./: CMakeLists.txt  README.md  run.sh
cmake/public/: CUDA.cmake  Utils.cmake  cusp.cmake  eigen.cmake
dataset/: download.sh
include/spmm/mm/: spmm_common.h  spmm_kernel.h
include/spmm/utils/: compare.h  timer_cpu.h  timer_cuda.h
include/starml/basic/: allocator.h  allocator_cpu.h  allocator_cuda.h  common_cuda.h  device.h  dispatch.h  handle.h  handle_cpu.h  handle_cuda.h  matrix.h  matrix_printer.h  scalar.h  type.h
include/starml/operators/: binary_ops.h  copy.h  expression.h  factories.h  unary_ops.h
include/starml/utils/: loguru.h  macros.h
spmm/mm/: spmm_common.cpp  spmm_kernel.cu
spmm/starml/basic/: allocator.cpp  allocator_cpu.cpp  allocator_cuda.cpp  common_cuda.cpp  device.cpp  handle.cpp  handle_cpu.cpp  handle_cuda.cpp  matrix.cpp  matrix_printer.cpp  scalar.cpp  type.cpp
spmm/starml/operators/: binary_ops.cpp  copy.cpp  expression.cpp  factories.cpp  unary_ops.cpp
spmm/starml/operators/cpu/: binary_kernel.cpp  copy_kernel.cpp  factories_kernel.cpp  index_helper.h  unary_kernel.cpp
spmm/starml/operators/cuda/: binary_kernel.cu  copy_kernel.cu  factories_kernel.cu  index_helper.cuh  unary_kernel.cu
spmm/starml/utils/: loguru.cpp
spmm/utils/: compare.cpp
test/: CMakeLists.txt  main.cpp  test_all.cpp
